@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-26T00:25:50Z",
+  "timestamp" : "2024-01-26T08:07:06Z",
   "count_outdated" : 3625,
   "uniques_outdated" : 1609,
-  "count" : 3746,
-  "uniques" : 1693,
+  "count" : 3747,
+  "uniques" : 1694,
   "clones" : [
     {
       "timestamp": "2024-01-12T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 14,
       "uniques_minmax": [ 12, 14 ],
       "uniques_decinc": [ 0, 14 ]
+    },
+    {
+      "timestamp": "2024-01-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
