@@ -1,5 +1,5 @@
 {
-  "count": 120,
+  "count": 121,
   "uniques": 60,
   "clones": [
     {
@@ -61,6 +61,11 @@
       "timestamp": "2024-01-25T00:00:00Z",
       "count": 23,
       "uniques": 14
+    },
+    {
+      "timestamp": "2024-01-26T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
